# sera_ai

./: .env.example  .gitignore  CLAUDE.md  CONTEXT.md  config.yaml  demo_komplet.py  pyproject.toml
dashboard/: .env.example  package-lock.json  package.json
dashboard/src/: App.tsx  api.ts  index.css  types.ts
dashboard/src/components/: AlarmBanner.tsx  GoruntuAnaliz.tsx  KaynakBadge.tsx  KomutPanel.tsx  Navbar.tsx  SensorChart.tsx  SensorRow.tsx  SeraCard.tsx  SeraDetayPanel.tsx  SeraModal.tsx  Sidebar.tsx  StatusBadge.tsx
dashboard/src/context/: AuthContext.tsx  DataContext.tsx  KomutGuvenlik.tsx
dashboard/src/pages/: AlarmMerkezi.tsx  Ayarlar.tsx  CihazDetay.tsx  Ekonomi.tsx  GenelBakis.tsx  Grafikler.tsx  LogKomutlar.tsx  Login.tsx  Sulama.tsx  SulamaGrup.tsx
esp32/: README.md  actuators.py  boot.py  config.py  main.py  mqtt_client.py  provisioning.py  sensors.py  watchdog.py
esp32/cam/: README.md  sera_cam.ino
esp32/crowpanel/: README.md  sera_panel.ino
grafana/: docker-compose.yml
grafana/dashboards/: sera_genel_bakis.json  sistem_saglik.json
grafana/promtail/: config.yml
grafana/provisioning/dashboards/: dashboards.yaml
grafana/provisioning/datasources/: datasources.yaml
models/: rl_s1.pkl  rl_s2.pkl  rl_s3.pkl
pcb/: README.md  gen_aux.py  kicad_gen.py
pcb/climate_node/: bom.csv  climate_node.kicad_pcb  climate_node.kicad_prl  climate_node.kicad_pro  climate_node.kicad_sch  pick_and_place.csv
pcb/climate_node/gerber/: climate_node-B_Cu.gbl  climate_node-Edge_Cuts.gm1  climate_node-F_Cu.gtl  climate_node-F_Silkscreen.gto  climate_node.drl
pcb/irrigation_node/: bom.csv  irrigation_node.kicad_pcb  irrigation_node.kicad_prl  irrigation_node.kicad_pro  irrigation_node.kicad_sch  pick_and_place.csv
pcb/irrigation_node/gerber/: irrigation_node-B_Cu.gbl  irrigation_node-B_Mask.gbs  irrigation_node-Edge_Cuts.gm1  irrigation_node-F_Cu.gtl  irrigation_node-F_Silkscreen.gto  irrigation_node.drl
pcb/sensor_node/: bom.csv  pick_and_place.csv  sensor_node.kicad_pcb  sensor_node.kicad_prl  sensor_node.kicad_pro  sensor_node.kicad_sch
pcb/sensor_node/gerber/: sensor_node-B_Cu.gbl  sensor_node-B_Silkscreen.gbo  sensor_node-Edge_Cuts.gm1  sensor_node-F_Cu.gtl  sensor_node-F_Mask.gts  sensor_node-F_Silkscreen.gto  sensor_node.drl
sera_ai/: __main__.py
sera_ai/api/: app.py  auth.py  auth_router.py  jwt_auth.py  metrics.py  models.py  seralar_router.py  servis.py  sulama_router.py
sera_ai/application/: control_engine.py  event_bus.py
sera_ai/config/: settings.py
sera_ai/domain/: circuit_breaker.py  models.py  state_machine.py
sera_ai/drivers/: base.py  esp32_s3.py  mock.py
sera_ai/goruntu/: __init__.py  analizci.py  base.py  egitim.py  esp32_kamera.py  mock.py  model.py
sera_ai/infrastructure/analytics/: __init__.py  sensor_saglik.py
sera_ai/intelligence/: __init__.py  base.py  egitim.py  feature_extractor.py  kural_motoru.py  ml_motor.py  mock.py  rl_ajan.py
sera_ai/merkez/: base.py  mock.py  raspberry_pi.py
sera_ai/sensors/: __init__.py  base.py  bh1750.py  dht22.py  kapasitif_nem.py  mh_z19c.py  mock.py  sht31.py
tests/: conftest.py
tests/integration/: test_control_engine.py  test_uctan_uca.py
tests/unit/: test_api_auth.py  test_api_servis.py  test_cihaz.py  test_circuit_breaker.py  test_esp32_dogrulama.py  test_intelligence.py  test_logging.py  test_ml_motor.py  test_mqtt.py  test_notifications.py  test_repositories.py  test_rl_ajan.py  test_rules.py  test_sensor_saglik.py  test_sensors.py  test_state_machine.py  test_zero_touch.py
(+25 files in other folders)
