[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sera-ai"
version = "0.2.0"
description = "Endüstriyel sera otomasyon sistemi — Arduino/ESP32-S3 + Raspberry Pi 5"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
hardware = [
    "paho-mqtt>=1.6",
    "pyserial>=3.5",
]
api = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "slowapi>=0.1.9",
    "httpx>=0.27",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "joblib>=1.3",
]
notifications = [
    "requests>=2.31",
    "twilio>=8.0",
]
ml = [
    "scikit-learn>=1.3",
    "numpy>=1.24",
    "joblib>=1.3",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "fastapi>=0.110",
    "httpx>=0.27",
    "slowapi>=0.1.9",
    "scikit-learn>=1.3",
    "numpy>=1.24",
    "joblib>=1.3",
]
all = [
    "sera-ai[hardware,api,notifications,ml,dev]",
]

[project.scripts]
sera-ai = "sera_ai.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["sera_ai"]
omit = ["tests/*"]

[tool.setuptools.packages.find]
where = ["."]
include = ["sera_ai*"]
